<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobilGunlerUygulama</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
</resources>
