<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/activity_background" >

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        
        <EditText 
            android:id="@+id/kullaniciAdi_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:hint="@string/username"/>
        
        <EditText 
            android:id="@+id/sifre_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:hint="@string/password"/>
        
        <Button 
            android:id="@+id/giris_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/button_color"
            android:text="@string/login"/>
        
    </LinearLayout>

</RelativeLayout>
